--- a/ee2026/Week 7_Task/Week 7_Task.runs/impl_1/usage_statistics_webtalk.html
+++ b/ee2026/Week 7_Task/Week 7_Task.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Oct  1 17:18:52 2025</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Oct  4 22:39:23 2025</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>a19986a047374f059d96790ebd940865</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>10</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>63d0521a-7b17-4c23-bf5d-8f2179b2f3a8</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>63d0521a-7b17-4c23-bf5d-8f2179b2f3a8</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -31,60 +31,76 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=2</TD>
-   <TD>basedialog_cancel=5</TD>
+<TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=3</TD>
+   <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
+   <TD>basedialog_cancel=7</TD>
    <TD>basedialog_no=1</TD>
-   <TD>basedialog_ok=45</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=5</TD>
-   <TD>cmdmsgdialog_ok=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=66</TD>
+   <TD>basedialog_yes=9</TD>
+   <TD>cmdmsgdialog_ok=11</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>constraintschooserpanel_create_file=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>createconstraintsfilepanel_file_name=1</TD>
-   <TD>createsrcfiledialog_file_name=5</TD>
-   <TD>filesetpanel_file_set_panel_tree=53</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=21</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_close=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_create_file=2</TD>
+   <TD>createconstraintsfilepanel_file_name=2</TD>
+   <TD>createsrcfiledialog_file_name=6</TD>
+   <TD>filesetpanel_file_set_panel_tree=100</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=30</TD>
+   <TD>hcodeeditor_close=4</TD>
    <TD>hcodeeditor_search_text_combo_box=11</TD>
-   <TD>mainmenumgr_file=4</TD>
-   <TD>mainmenumgr_open_recent_project=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=5</TD>
+   <TD>mainmenumgr_checkpoint=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_edit=2</TD>
+   <TD>mainmenumgr_export=4</TD>
+   <TD>mainmenumgr_file=12</TD>
+   <TD>mainmenumgr_flow=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_import=4</TD>
+   <TD>mainmenumgr_ip=4</TD>
+   <TD>mainmenumgr_open_recent_project=5</TD>
+   <TD>mainmenumgr_project=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_settings=1</TD>
+   <TD>mainmenumgr_text_editor=4</TD>
    <TD>msgtreepanel_message_view_tree=22</TD>
-   <TD>pacommandnames_add_sources=6</TD>
-   <TD>pacommandnames_archive_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_connect_target=6</TD>
+   <TD>pacommandnames_add_sources=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_archive_project=3</TD>
+   <TD>pacommandnames_auto_connect_target=11</TD>
    <TD>pacommandnames_goto_implemented_design=1</TD>
-   <TD>pacommandnames_open_hardware_manager=3</TD>
+   <TD>pacommandnames_open_hardware_manager=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_project=1</TD>
    <TD>pacommandnames_reports_window=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_bitgen=7</TD>
-   <TD>paviews_code=2</TD>
-   <TD>programdebugtab_open_target=6</TD>
-   <TD>programdebugtab_program_device=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=8</TD>
-   <TD>saveprojectutils_dont_save=1</TD>
+   <TD>pacommandnames_run_bitgen=11</TD>
+   <TD>pacommandnames_simulation_run=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=2</TD>
+   <TD>programdebugtab_open_target=10</TD>
+   <TD>programdebugtab_program_device=13</TD>
+   <TD>programfpgadialog_program=14</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_dont_save=1</TD>
    <TD>saveprojectutils_save=4</TD>
-   <TD>srcchooserpanel_create_file=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>statemonitor_reset_run=1</TD>
+   <TD>srcchooserpanel_create_file=6</TD>
+   <TD>statemonitor_reset_run=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=2</TD>
    <TD>syntheticastatemonitor_cancel=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=6</TD>
-   <TD>archiveproject=1</TD>
-   <TD>autoconnecttarget=6</TD>
-   <TD>editcopy=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=8</TD>
-   <TD>openhardwaremanager=3</TD>
-   <TD>runbitgen=8</TD>
-   <TD>runimplementation=12</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=8</TD>
+   <TD>archiveproject=3</TD>
+   <TD>autoconnecttarget=9</TD>
+   <TD>closeproject=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editcopy=1</TD>
+   <TD>launchprogramfpga=14</TD>
+   <TD>openhardwaremanager=7</TD>
+   <TD>openproject=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=1</TD>
+   <TD>programdevice=1</TD>
+   <TD>runbitgen=12</TD>
+   <TD>runimplementation=16</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
    <TD>savefileproxyhandler=2</TD>
    <TD>showview=3</TD>
    <TD>toolssettings=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=4</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=2</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=10</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -124,44 +140,44 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=238</TD>
+    <TD>carry4=240</TD>
     <TD>dsp48e1=6</TD>
-    <TD>fdre=528</TD>
+    <TD>fdre=524</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=6</TD>
-    <TD>gnd=25</TD>
+    <TD>gnd=26</TD>
     <TD>ibuf=12</TD>
     <TD>lut1=55</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=326</TD>
-    <TD>lut3=199</TD>
-    <TD>lut4=146</TD>
-    <TD>lut5=190</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=327</TD>
+    <TD>lut3=198</TD>
+    <TD>lut4=154</TD>
+    <TD>lut5=181</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6=431</TD>
     <TD>obuf=19</TD>
     <TD>obuft=1</TD>
     <TD>ramb36e1=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcc=22</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=23</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=238</TD>
+    <TD>carry4=240</TD>
     <TD>dsp48e1=6</TD>
-    <TD>fdre=528</TD>
+    <TD>fdre=524</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=6</TD>
-    <TD>gnd=25</TD>
+    <TD>gnd=26</TD>
     <TD>ibuf=12</TD>
     <TD>lut1=55</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=326</TD>
-    <TD>lut3=199</TD>
-    <TD>lut4=146</TD>
-    <TD>lut5=190</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=327</TD>
+    <TD>lut3=198</TD>
+    <TD>lut4=154</TD>
+    <TD>lut5=181</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6=431</TD>
     <TD>obuf=19</TD>
     <TD>obuft=1</TD>
     <TD>ramb36e1=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcc=22</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=23</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -185,7 +201,7 @@
     <TD>flow_state=default</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_augmented=0</TD>
     <TD>slice_registers_newly_gated=0</TD>
-    <TD>slice_registers_total=534</TD>
+    <TD>slice_registers_total=530</TD>
     <TD>srls_augmented=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>srls_newly_gated=0</TD>
     <TD>srls_total=0</TD>
@@ -333,11 +349,11 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=2</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=238</TD>
+    <TD>carry4_used=240</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp48e1_functional_category=Block Arithmetic</TD>
     <TD>dsp48e1_used=6</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=528</TD>
+    <TD>fdre_used=524</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=6</TD>
     <TD>ibuf_functional_category=IO</TD>
@@ -345,13 +361,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=52</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=326</TD>
+    <TD>lut2_used=327</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=199</TD>
+    <TD>lut3_used=198</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=146</TD>
+    <TD>lut4_used=154</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=190</TD>
+    <TD>lut5_used=181</TD>
     <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=431</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
@@ -375,36 +391,36 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=1134</TD>
-    <TD>lut_as_logic_util_percentage=5.45</TD>
+    <TD>lut_as_logic_used=1136</TD>
+    <TD>lut_as_logic_util_percentage=5.46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=534</TD>
-    <TD>register_as_flip_flop_util_percentage=1.28</TD>
+    <TD>register_as_flip_flop_used=530</TD>
+    <TD>register_as_flip_flop_util_percentage=1.27</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=1134</TD>
-    <TD>slice_luts_util_percentage=5.45</TD>
+    <TD>slice_luts_used=1136</TD>
+    <TD>slice_luts_util_percentage=5.46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=534</TD>
-    <TD>slice_registers_util_percentage=1.28</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=1.28</TD>
-    <TD>fully_used_lut_ff_pairs_used=6</TD>
+    <TD>slice_registers_used=530</TD>
+    <TD>slice_registers_util_percentage=1.27</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=1.27</TD>
+    <TD>fully_used_lut_ff_pairs_used=4</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=1134</TD>
-    <TD>lut_as_logic_util_percentage=5.45</TD>
+    <TD>lut_as_logic_used=1136</TD>
+    <TD>lut_as_logic_util_percentage=5.46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
@@ -412,28 +428,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=138</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=138</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=135</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=134</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=134</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=136</TD>
     <TD>lut_flip_flop_pairs_available=20800</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=150</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.72</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=147</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.71</TD>
     <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=425</TD>
-    <TD>slice_util_percentage=5.21</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=427</TD>
+    <TD>slice_util_percentage=5.24</TD>
     <TD>slicel_fixed=0</TD>
     <TD>slicel_used=267</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=158</TD>
+    <TD>slicem_used=160</TD>
     <TD>unique_control_sets_used=29</TD>
     <TD>using_o5_and_o6_fixed=29</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=210</TD>
-    <TD>using_o5_output_only_fixed=210</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=207</TD>
+    <TD>using_o5_output_only_fixed=207</TD>
     <TD>using_o5_output_only_used=1</TD>
     <TD>using_o6_output_only_fixed=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=923</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=928</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -483,7 +499,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=1075269</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=1047111</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=4</TD>
@@ -493,15 +509,15 @@
     <TD>ctrls=29</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=6</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=1315698</TD>
-    <TD>ff=534</TD>
+    <TD>estimated_expansions=1292850</TD>
+    <TD>ff=530</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>high_fanout_nets=1</TD>
     <TD>iob=32</TD>
-    <TD>lut=1217</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=2208</TD>
-    <TD>nets=3050</TD>
-    <TD>pins=17230</TD>
+    <TD>lut=1215</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=2207</TD>
+    <TD>nets=3051</TD>
+    <TD>pins=17233</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -554,10 +570,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:35s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:41s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=634.078MB</TD>
-    <TD>memory_peak=879.004MB</TD>
+    <TD>memory_gain=631.809MB</TD>
+    <TD>memory_peak=877.465MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
