Reset index.html to version from b1d92f9 commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="hero">
         <div class="hero-container">
             <h2></h2>
-            <p>Computer Engineering @ NUS (Year 2). Hardware design (Verilog, Arduino, C/C++) + software automation (Python, Java, JavaScript, TypeScript). Building AI tools and efficient systems.</p>
+            <p>Innovative Computer Engineering student at NUS bridging hardware and software worlds</p>
             <a href="#contact" class="cta-button">Get In Touch</a>
         </div>
     </section>
@@ -32,8 +32,8 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Year 2 Computer Engineering student at National University of Singapore. Work spans hardware design (Verilog, Arduino, C/C++) and software automation (Python, Java, JavaScript, TypeScript). Focus on building AI tools and efficient systems that solve real problems.</p>
-            <p>Currently developing Wingman (Electron-based AI assistant) and Helper Tools (Python automation suite for media processing, file scanning, and transcription).</p>
+            <p>I'm a Year 2 Computer Engineering student at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
+            <p>When I'm not coding, you can find me exploring new technologies, working on personal projects, or contributing to open-source communities.</p>
         </div>
     </section>
 
@@ -47,14 +47,14 @@
                     <a href="https://github.com/Yxiang-828/Wingman" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-card">
-                    <h3>Helper Tools</h3>
-                    <p>Python automation suite with 7 tools: AI upscaler (RealESRGAN/EDSR, 4x quality), video-to-GIF converter, audio transcriber (Whisper), CC/subtitle extractor (FFmpeg), File Scanner (95K+ files/sec, PowerShell). MIT licensed.</p>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools" target="_blank">View on GitHub</a>
+                    <h3>Project 2</h3>
+                    <p>Description of another project.</p>
+                    <a href="#" target="_blank">View Project</a>
                 </div>
                 <div class="project-card">
-                    <h3>Unity Image Extractor</h3>
-                    <p>Python tool for extracting images from Unity asset bundles. Supports batch processing and multiple Unity versions.</p>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank">View on GitHub</a>
+                    <h3>Project 3</h3>
+                    <p>Description of another project.</p>
+                    <a href="#" target="_blank">View Project</a>
                 </div>
             </div>
         </div>
