Add all 7 Helper Tools to homepage + create 8 detailed project pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Yao Xiang, Computer Engineering student at NUS specializing in AI, hardware, and software development.">
+    <meta name="keywords" content="Yao Xiang, Computer Engineering, NUS, AI, Python, JavaScript, Verilog, Arduino, Helper Tools, Wingman">
     <title>Yao Xiang - Computer Engineering Student</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -24,7 +24,7 @@
     <section id="hero">
         <div class="hero-container">
             <h2></h2>
-            <p>Innovative Computer Engineering student at NUS bridging hardware and software worlds</p>
+            <p>Computer Engineering @ NUS (Year 2). Hardware design (Verilog, Arduino, C/C++) + software automation (Python, Java, JavaScript, TypeScript). Building AI tools and efficient systems.</p>
             <a href="#contact" class="cta-button">Get In Touch</a>
         </div>
     </section>
@@ -33,7 +33,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>I'm a Year 2 Computer Engineering student at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
-            <p>When I'm not coding, you can find me exploring new technologies, working on personal projects, or contributing to open-source communities.</p>
+            <p>Currently developing Helper Tools (high-performance CLI utilities for developers) and Wingman (Electron-based AI assistant desktop app).</p>
         </div>
     </section>
 
@@ -42,19 +42,53 @@
             <h2>Featured Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <h3>Wingman</h3>
-                    <p>A sophisticated personal assistant desktop app built with <strong>Electron</strong>, <strong>React</strong>, <strong>TypeScript</strong>, and <strong>Python</strong>. Features AI integration, task management, and cross-platform support.</p>
-                    <a href="https://github.com/Yxiang-828/Wingman" target="_blank">View on GitHub</a>
+                    <h3>🤖 Wingman</h3>
+                    <p>Electron-based AI assistant desktop app. <strong>Electron + React + TypeScript + Python</strong>. Features AI integration, task management, cross-platform support.</p>
+                    <a href="wingman.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Wingman" target="_blank">GitHub →</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 2</h3>
-                    <p>Description of another project.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>🎨 Image Upscaler</h3>
+                    <img src="https://raw.githubusercontent.com/Yxiang-828/Helper_Tools/main/image_upscaler/samples/realesrgan_1.png" alt="Image Upscaler Comparison" loading="lazy">
+                    <p><strong>Real-ESRGAN + EDSR AI models</strong>. GPU-accelerated (2-5s/image). 4x quality boost. AMD Vulkan optimized.</p>
+                    <a href="image-upscaler.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank">GitHub →</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 3</h3>
-                    <p>Description of another project.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>🎬 Video Upscaler</h3>
+                    <p><strong>Real-ESRGAN + FFmpeg</strong>. Frame-by-frame AI upscaling (4x resolution). AMD hardware encoding with CPU fallback.</p>
+                    <a href="video-upscaler.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank">GitHub →</a>
+                </div>
+                <div class="project-card">
+                    <h3>🎞️ Video to GIF Converter</h3>
+                    <p><strong>MoviePy + Pillow</strong>. Exact size constraints (1-50MB). Speed control (0.1x-2.0x). Auto-resolution scaling.</p>
+                    <a href="video-to-gif.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank">GitHub →</a>
+                </div>
+                <div class="project-card">
+                    <h3>🎤 Audio Transcriber</h3>
+                    <p><strong>Whisper (ONNX) + DirectML</strong>. AMD GPU acceleration. Processes long audio (30+ min). 3-5x faster than CPU.</p>
+                    <a href="audio-transcriber.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank">GitHub →</a>
+                </div>
+                <div class="project-card">
+                    <h3>📝 Subtitle/MP3 Extractor</h3>
+                    <p><strong>FFmpeg CLI wrapper</strong>. Extracts embedded SRT subtitles. Falls back to MP3 audio extraction.</p>
+                    <a href="subtitle-extractor.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank">GitHub →</a>
+                </div>
+                <div class="project-card">
+                    <h3>🔍 File Scanner</h3>
+                    <p><strong>.NET APIs + PowerShell</strong>. 95K+ files/sec on HDD. Min-heap top-K algorithm. 16-50x faster than Get-ChildItem.</p>
+                    <a href="file-scanner.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank">GitHub →</a>
+                </div>
+                <div class="project-card">
+                    <h3>🎮 Unity Image Extractor</h3>
+                    <p><strong>UnityPy + PIL</strong>. Extracts Texture2D/Sprite assets from .unity3d bundles. Batch processing, PNG conversion.</p>
+                    <a href="unity-extractor.html">View Details</a>
+                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank">GitHub →</a>
                 </div>
             </div>
         </div>
@@ -103,6 +137,7 @@
             <p>I'm always open to discussing new opportunities, interesting projects, or just having a chat about technology!</p>
             <div class="contact-info">
                 <p><strong>Email:</strong> xiangyao888@gmail.com</p>
+                <p><strong>Website:</strong> <a href="https://yxiang-828.github.io/" target="_blank">yxiang-828.github.io</a></p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/Yxiang-828" target="_blank">github.com/Yxiang-828</a></p>
                 <p><strong>LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/yourprofile</a></p>
             </div>
