Add project categories and technology explanations to subtitle-extractor and video-to-gif pages

--- a/video-to-gif.html
+++ b/video-to-gif.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -230,3 +230,4 @@ py converter.py "video.mp4" --size 20 --speed 0.5</code></pre>
     <footer><div class="container"><p>&copy; 2025 Yao Xiang. All rights reserved.</p></div></footer>
 </body>
 </html>
+
