Add project category and My Implementation section to image-upscaler page

--- a/image-upscaler.html
+++ b/image-upscaler.html
@@ -97,6 +97,8 @@
         
         <h1 style="color: #00d4ff; margin-bottom: 20px;">🎨 AMD GPU Image Upscaler</h1>
         
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+
         <div class="tech-stack">
             <span class="tech-badge">Real-ESRGAN</span>
             <span class="tech-badge">EDSR</span>
@@ -213,3 +215,4 @@
     </footer>
 </body>
 </html>
+
