Add project category and comprehensive algorithmic analysis (O(M log K) complexity, 16-50x speedup explanation, BFS vs DFS) to file-scanner page

--- a/file-scanner.html
+++ b/file-scanner.html
@@ -38,6 +38,8 @@
         
         <h1 style="color: #00d4ff; margin-bottom: 20px;">🔍 File Scanner</h1>
         
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+
         <div class="tech-stack">
             <span class="tech-badge">.NET Framework</span>
             <span class="tech-badge">PowerShell</span>
@@ -191,3 +193,4 @@ while ($queue.Count -gt 0) {
     </footer>
 </body>
 </html>
+
